Phan report cua e

--- a/ConstructionMS/Views/Products/Index.cshtml
+++ b/ConstructionMS/Views/Products/Index.cshtml
@@ -71,19 +71,7 @@
             </div>
 
             <!-- Nav Item - Pages Collapse Menu -->
-            @*<li class="nav-item">
-                    <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-                        <i class="fas fa-fw fa-cog"></i>
-                        <span>Components</span>
-                    </a>
-                    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
-                        <div class="bg-white py-2 collapse-inner rounded">
-                            <h6 class="collapse-header">Custom Components:</h6>
-                            <a class="collapse-item" href="buttons.html">Buttons</a>
-                            <a class="collapse-item" href="cards.html">Cards</a>
-                        </div>
-                    </div>
-                </li>*@
+            
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
@@ -104,53 +92,20 @@
             </li>
 
             <!-- Nav Item - Utilities Collapse Menu -->
-            @*<li class="nav-item">
-                    <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
-                        <i class="fas fa-fw fa-wrench"></i>
-                        <span>Utilities</span>
-                    </a>
-                    <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
-                        <div class="bg-white py-2 collapse-inner rounded">
-                            <h6 class="collapse-header">Custom Utilities:</h6>
-                            <a class="collapse-item" href="utilities-color.html">Colors</a>
-                            <a class="collapse-item" href="utilities-border.html">Borders</a>
-                            <a class="collapse-item" href="utilities-animation.html">Animations</a>
-                            <a class="collapse-item" href="utilities-other.html">Other</a>
-                        </div>
-                    </div>
-                </li>*@
+           
 
             <!-- Divider -->
             <hr class="sidebar-divider">
 
             <!-- Heading -->
-            @*<div class="sidebar-heading">
-                    Addons
-                </div>*@
+            
 
             <div class="sidebar-heading">
                 Thiết lập
             </div>
 
             <!-- Nav Item - Pages Collapse Menu -->
-            @*<li class="nav-item">
-                    <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true" aria-controls="collapsePages">
-                        <i class="fas fa-fw fa-folder"></i>
-                        <span>Pages</span>
-                    </a>
-                    <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
-                        <div class="bg-white py-2 collapse-inner rounded">
-                            <h6 class="collapse-header">Login Screens:</h6>
-                            <a class="collapse-item" href="login.html">Login</a>
-                            <a class="collapse-item" href="register.html">Register</a>
-                            <a class="collapse-item" href="forgot-password.html">Forgot Password</a>
-                            <div class="collapse-divider"></div>
-                            <h6 class="collapse-header">Other Pages:</h6>
-                            <a class="collapse-item" href="404.html">404 Page</a>
-                            <a class="collapse-item" href="blank.html">Blank Page</a>
-                        </div>
-                    </div>
-                </li>*@
+            
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true" aria-controls="collapsePages">
                     <i class="fas fa-fw fa-folder"></i>
@@ -388,9 +343,7 @@
 
                     <!-- Page Heading -->
                     <h1 class="h3 mb-2 text-gray-800">Danh sách sản phẩm</h1>
-                    @*<p class="mb-4">DataTables is a third party plugin that is used to generate the demo table below. 
-                    For more information about DataTables, please visit the 
-                    <a target="_blank" href="https://datatables.net">official DataTables documentation</a>.</p>*@
+                    
 
                     <!-- DataTales Example -->
                     <div class="card shadow mb-4">
@@ -404,21 +357,6 @@
                                 </span>
                             </a>
                         </div>
-
-
-                        @*<p>
-                            @Html.ActionLink("Tạo mới sản phẩm", "Create")
-                        </p>*@
-
-                        @*<a href="#" class="btn btn-success btn-icon-split" style="float:right;">
-                            <span class="icon text-white-50">
-                                <i class="fas fa-check"></i>
-                            </span>
-                            <input type="submit" value="Hoàn tất" class="btn btn-success " />
-                        </a>*@
-
-                     
-
                         <div class="card-body">
                             <div class="table-responsive">
                                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
@@ -450,15 +388,7 @@
                                                 <center> Tùy chọn</center>
                                                
                                             </th>
-                                            @*<th>
-                                @Html.DisplayNameFor(model => model.Height)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Material)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Quantity)
-                            </th>*@
+                                         
 
                                         </tr>
 
@@ -470,13 +400,21 @@
                                                 </td>
                                                 
                                                 <td>
-                                                    @*@Html.DisplayFor(modelItem => item.ImageUpload)*@
-                                                    @*@{
-            var base64 = Convert.ToBase64String(item.ImageUpload);
-            var imgsrc = string.Format("data:image/gif;base64,{0}", base64);
-        }*@
+                                                    @if (item.ImageUpload != null)
+                                                    {
+                                                        var base64 = Convert.ToBase64String(item.ImageUpload);
+                                                        var imgsrc = string.Format("data:image/jpg;base64,{0}", base64);
+                                                  
+                                                        <img src="data:image;base64,@System.Convert.ToBase64String(item.ImageUpload)" alt="" width="150" height="125" />
+                                                    }
+                                                    else
+                                                    {
+                                                        <img src="~/App_Data/uploads/Capture.JPG"
+                                                             style="max-width:100px;max-height:100px" />
+                                                    }
+
                                                     @*<img runat="server" src="@String.Format("data:image/jpg;base64,{0}", item.ImageUpload)" />*@
-                                                    <img src="data:image;base64,@System.Convert.ToBase64String(item.ImageUpload)" alt="" />
+                                                    @*<img src="data:image;base64,@System.Convert.ToBase64String(item.ImageUpload)" alt="" />*@
                                                     @*<img src='@imgsrc' style="max-width:100px;max-height:100px" />*@
                                                 </td>
                                                 <td>
@@ -514,9 +452,7 @@
                                                     @*button Delete*@
                                                     @Html.ActionLink("Xóa", "Delete", new { id = item.ProductID }, new { @class = "btn btn-danger" })
 
-                                                    @*@Html.ActionLink("Edit", "Edit", new { id = item.ProductID }) |*@
-                                                    @*<button onclick="@Url.Action("Edit", "Edit", new {id = item.ProductID })">Edit</button>*@
-                                                    @*@Html.ActionLink("Details", "Details", new { id = item.ProductID }) |*@
+                                                  
 
 
 
@@ -524,16 +460,7 @@
                                             </tr>
                                         }
                                     </thead>
-                                    @*<tfoot>
-                        <tr>
-                            <th>Name</th>
-                            <th>Position</th>
-                            <th>Office</th>
-                            <th>Age</th>
-                            <th>Start date</th>
-                            <th>Salary</th>
-                        </tr>
-                    </tfoot>*@
+                                   
 
                                 </table>
                             </div>
