--- a/ConstructionMS/Views/Products/Edit.cshtml
+++ b/ConstructionMS/Views/Products/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ConstructionMS.Product
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edit";
 }
 
 <!DOCTYPE html>
@@ -61,9 +61,7 @@
             <hr class="sidebar-divider">
 
             <!-- Heading -->
-            @*<div class="sidebar-heading">
-                    Interface
-                </div>*@
+            
 
             <!-- Heading -->
             <div class="sidebar-heading">
@@ -71,19 +69,7 @@
             </div>
 
             <!-- Nav Item - Pages Collapse Menu -->
-            @*<li class="nav-item">
-                    <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-                        <i class="fas fa-fw fa-cog"></i>
-                        <span>Components</span>
-                    </a>
-                    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
-                        <div class="bg-white py-2 collapse-inner rounded">
-                            <h6 class="collapse-header">Custom Components:</h6>
-                            <a class="collapse-item" href="buttons.html">Buttons</a>
-                            <a class="collapse-item" href="cards.html">Cards</a>
-                        </div>
-                    </div>
-                </li>*@
+           
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
@@ -104,53 +90,20 @@
             </li>
 
             <!-- Nav Item - Utilities Collapse Menu -->
-            @*<li class="nav-item">
-                    <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
-                        <i class="fas fa-fw fa-wrench"></i>
-                        <span>Utilities</span>
-                    </a>
-                    <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
-                        <div class="bg-white py-2 collapse-inner rounded">
-                            <h6 class="collapse-header">Custom Utilities:</h6>
-                            <a class="collapse-item" href="utilities-color.html">Colors</a>
-                            <a class="collapse-item" href="utilities-border.html">Borders</a>
-                            <a class="collapse-item" href="utilities-animation.html">Animations</a>
-                            <a class="collapse-item" href="utilities-other.html">Other</a>
-                        </div>
-                    </div>
-                </li>*@
+          
 
             <!-- Divider -->
             <hr class="sidebar-divider">
 
             <!-- Heading -->
-            @*<div class="sidebar-heading">
-                    Addons
-                </div>*@
+           
 
             <div class="sidebar-heading">
                 Thiết lập
             </div>
 
             <!-- Nav Item - Pages Collapse Menu -->
-            @*<li class="nav-item">
-                    <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true" aria-controls="collapsePages">
-                        <i class="fas fa-fw fa-folder"></i>
-                        <span>Pages</span>
-                    </a>
-                    <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
-                        <div class="bg-white py-2 collapse-inner rounded">
-                            <h6 class="collapse-header">Login Screens:</h6>
-                            <a class="collapse-item" href="login.html">Login</a>
-                            <a class="collapse-item" href="register.html">Register</a>
-                            <a class="collapse-item" href="forgot-password.html">Forgot Password</a>
-                            <div class="collapse-divider"></div>
-                            <h6 class="collapse-header">Other Pages:</h6>
-                            <a class="collapse-item" href="404.html">404 Page</a>
-                            <a class="collapse-item" href="blank.html">Blank Page</a>
-                        </div>
-                    </div>
-                </li>*@
+          
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true" aria-controls="collapsePages">
                     <i class="fas fa-fw fa-folder"></i>
@@ -387,11 +340,7 @@
                 <div class="container-fluid">
 
                     <!-- Page Heading -->
-                    @*<h1 class="h3 mb-2 text-gray-800">Danh sách sản phẩm</h1>*@
-                    @*<p class="mb-4">DataTables is a third party plugin that is used to generate the demo table below.
-                        For more information about DataTables, please visit the
-                        <a target="_blank" href="https://datatables.net">official DataTables documentation</a>.</p>*@
-
+                   
                     <!-- DataTales Example -->
                     <div class="card shadow mb-4">
                         <div class="card-header py-3">
@@ -404,16 +353,6 @@
                                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                                     <thead>
                                         <tr>
-
-                                            @*<th>
-                @Html.DisplayNameFor(model => model.Height)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Material)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Quantity)
-            </th>*@
 
                                         </tr>
 
@@ -545,30 +484,8 @@
                                         </div>
                                         }
 
-                                        @*<div>
-                                            @Html.ActionLink("Back to List", "Index")
-                                        </div>*@
-
-
-                                        @*<div class="form-group">
-            <div class="fas fa-check" style="float:right;">
-                <input type="submit" value="Hoàn tất" class="btn btn-success " />
-            </div>
-        </div>*@
-
 
                                     </thead>
-                                    @*<tfoot>
-                                            <tr>
-                                                <th>Name</th>
-                                                <th>Position</th>
-                                                <th>Office</th>
-                                                <th>Age</th>
-                                                <th>Start date</th>
-                                                <th>Salary</th>
-                                            </tr>
-                                        </tfoot>*@
-
                                 </table>
                             </div>
                         </div>
